--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,36 @@
-<h2>Home file</h2>
+<section class="home" id="home">
+  <div class="row">
+    <div class="content">
+      <h1>
+        <span class="text-style">Reading gives</span><br />
+        us <span class="text-style"> someplace</span> to go when <br />we have
+        <span class="text-style">to stay</span> where we are
+      </h1>
+      <p>
+        You can download over 800 pdf book for free. No annoying ads, no
+        download limits, enjoy it
+      </p>
+      <button>Explore</button>
+    </div>
+    <div class="swiper book-slider">
+      <div class="swiper-wrapper">
+        <a href="#" class="swiper-slide"
+          ><img src="/images/book-1.png" alt="book image"
+        /></a>
+        <a href="#" class="swiper-slide"
+          ><img src="/images/book-2.png" alt="book image"
+        /></a>
+        <a href="#" class="swiper-slide"
+          ><img src="/images/book3.png" alt="book image"
+        /></a>
+        <a href="#" class="swiper-slide"
+          ><img src="/images/book-4.png" alt="book image"
+        /></a>
+        <a href="#" class="swiper-slide"
+          ><img src="/images/book5.png" alt="book image"
+        /></a>
+      </div>
+      <img src="/images/stand.png" class="stand" alt="" />
+    </div>
+  </div>
+</section>
