--- a/public/css/partials/login.css
+++ b/public/css/partials/login.css
@@ -1,4 +1,4 @@
-.login-form-page {
+.form-page {
   color: #fff;
   position: absolute;
   top: 0;
@@ -21,13 +21,13 @@
   z-index: 10000;
 }
 
-.login-form {
+.form {
   width: 400px;
-  height: 300px;
+  background-color: #ffff;
   position: relative;
 }
 
-.login-form h2 {
+.form h2 {
   color: #fff;
   font-weight: normal;
   width: 100%;
@@ -41,7 +41,6 @@
 .input-group {
   width: 100%;
   padding: 1rem 0;
-  background-color: #ffff;
 }
 
 .username {
@@ -80,10 +79,8 @@
 .submit {
   width: 110%;
   height: 50px;
-  position: absolute;
-  bottom: -26px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  left: -20px;
 }
 
 .login-btn {
@@ -137,7 +134,6 @@
   font-size: 0.9rem;
   font-weight: 600;
   color: rgba(43, 43, 43, 0.6);
-  width: 400px;
   padding: 0.6rem 0;
   margin-top: 0.07rem;
   text-align: center;
@@ -153,38 +149,31 @@
 /* Media Quaries */
 
 @media (max-width: 450px) {
-  .login-form {
+  .form {
     width: 350px;
   }
-  .login-form h2 {
+  .form h2 {
     font-size: 1.1rem;
   }
   .submit {
-    bottom: -20px;
-  }
-  .ref-register {
-    width: 350px;
-    margin-top: -0.3rem;
+    left: -18px;
   }
 }
 
 @media (max-width: 390px) {
-  .login-form {
+  .form {
     width: 300px;
   }
   .submit {
-    bottom: -20px;
-  }
-  .ref-register {
-    width: 300px;
+    left: -16px;
   }
 }
 
 @media (max-width: 340px) {
-  .login-form {
+  .form {
     width: 270px;
   }
-  .ref-register {
-    width: 270px;
+  .submit {
+    left: -14px;
   }
 }
