--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -43,7 +43,7 @@
     <title>My Library</title>
   </head>
   <body>
-    <%- include('../partials/header.ejs'), {user: locals.user} %> <%- body %>
+    <%- include('../partials/header.ejs') %> <%- body %>
     <script defer src="/javascript/index.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   </body>
