--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -56,7 +56,7 @@
         <a class="nav-link" href="/category/22">Technology</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">more</a>
+        <a class="nav-link" href="/category/13">Personal Growth</a>
       </li>
     </ul>
   </nav>
