--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,21 +42,47 @@
     </div>
   </div>
   <nav class="header-2">
-    <ul class="navbar">
+    <ul class="navbar first">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">Academic</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/category/11">Novel</a>
+        <a class="nav-link" href="/category/11">Fiction</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/category/15">Enviroment</a>
+        <a class="nav-link" href="/category/15">Art</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/category/22">Technology</a>
+        <a class="nav-link" href="/category/13">Health</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/category/13">Personal Growth</a>
+        <a class="nav-link" href="#">Politics</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/category/11">Biography</a>
+      </li>
+      <li class="nav-item">
+        <span>. . .</span>
+      </li>
+    </ul>
+    <ul class="navbar second">
+      <li class="nav-item">
+        <a class="nav-link" href="/category/15">Business</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/category/22">Children</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/category/15">Politics</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/category/22">Religion</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/category/13">Science</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/category/13">Technology</a>
       </li>
     </ul>
   </nav>
