--- a/public/css/partials/category.css
+++ b/public/css/partials/category.css
@@ -1,9 +1,10 @@
 .book-types {
-  background: url(../../images/banner-bg.jpg) no-repeat;
-  padding: 0 1rem;
+  background: url(../../images/banner-bg.jpg);
+  padding: 1rem;
+  position: relative;
 }
 .slider-header {
-  padding-bottom: 1rem;
+  margin-bottom: -1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,29 +20,27 @@
 .slider-title span {
   color: var(--primary);
 }
-.slider-container {
-  width: 97vw;
-  height: 240px;
-  margin: 0 auto;
-  overflow: hidden;
+
+/* Category Swiper */
+.category {
+  margin-bottom: 1rem;
   position: relative;
 }
-.inner-slider {
-  width: 1900px;
-  display: flex;
-  gap: 5px;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
+
+.category .swiper {
+  max-width: 100%;
+  height: 175px;
+  padding: 0.2rem 0;
+  margin-top: 1.5rem;
 }
-.card {
-  width: 200px;
-  height: 200px;
-  border-radius: 5px;
+
+.category .swiper-slide {
+  width: 70%;
+  height: 100%;
 }
-.card img {
-  width: 80%;
+
+.category .swiper-slide a {
+  width: 70% !important;
 }
 
 /* media quaries */
