--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,24 +28,23 @@
 </section>
 <section class="book-types" id="book-types">
   <%- include('./partials/category', {title: 'Academic & Education', books:
-  educationBooks, category: 'academic'}) %> <%- include('./partials/category',
-  {title: 'Art', books: artBooks, category: 'art'}) %><%-
-  include('./partials/category', {title: 'Biography', books: biographyBooks,
-  category: 'biography'}) %> <%- include('./partials/category', {title:
-  'Business & Career', books: businessBooks, category: 'business'}) %> <%-
-  include('./partials/category', {title: 'Children & Youth', books:
-  childrenBooks, category: 'children'}) %> <%- include('./partials/category',
-  {title: 'Enviroment', books: enviromentBooks, category: 'enviroment'}) %> <%-
-  include('./partials/category', {title: 'Fiction & Literature', books:
-  fictionBooks, category: 'fiction'}) %> <%- include('./partials/category',
-  {title: 'Health & Fitness', books: healthBooks, category: 'health'}) %> <%-
+  educationBooks, category: 'academic', num: '23'}) %> <%-
+  include('./partials/category', {title: 'Art', books: artBooks, category:
+  'art', num: '15'}) %> <%- include('./partials/category', {title: 'Psychology',
+  books: psychologyBooks, category: 'psychology', num: '73'}) %> <%-
+  include('./partials/category', {title: 'Enviroment', books: enviromentBooks,
+  category: 'enviroment', num: '77'}) %> <%- include('./partials/category',
+  {title: 'Fiction & Literature', books: fictionBooks, category: 'fiction' ,
+  num: '11'}) %> <%- include('./partials/category', {title: 'Health & Fitness',
+  books: healthBooks, category: 'health', num: '13'}) %> <%-
   include('./partials/category', {title: 'Lifestyle', books: lifestyleBooks,
-  category: 'lifestyle'}) %> <%- include('./partials/category', {title:
-  'Personal Growth', books: personalBooks, category: 'personal'}) %> <%-
-  include('./partials/category', {title: 'Politics & Laws', books:
-  politicsBooks, category: 'politics'}) %> <%- include('./partials/category',
-  {title: 'Religion', books: religionBooks, category: 'religion'}) %> <%-
-  include('./partials/category', {title: 'Science & Research', books:
-  scienceBooks, category: 'science'}) %> <%- include('./partials/category',
-  {title: 'Technology', books: technologyBooks, category: 'technology'}) %>
+  category: 'lifestyle' , num: '100'}) %> <%- include('./partials/category',
+  {title: 'Personal Growth', books: personalBooks, category: 'personal' , num:
+  '78'}) %> <%- include('./partials/category', {title: 'Politics & Laws', books:
+  politicsBooks, category: 'politics', num: '99'}) %> <%-
+  include('./partials/category', {title: 'Religion', books: religionBooks,
+  category: 'religion', num: '22'}) %> <%- include('./partials/category', {
+  title: 'Science & Research', books: scienceBooks, category: 'science', num:
+  '40' }) %> <%- include('./partials/category', {title: 'Technology', books:
+  technologyBooks, category: 'technology', num: '41'}) %>
 </section>
