--- a/views/partials/category.ejs
+++ b/views/partials/category.ejs
@@ -1,7 +1,7 @@
 <div class="category">
   <div class="slider-header">
     <h2 class="slider-title">Books for <span><%= locals.title %></span></h2>
-    <a href="#">See All >></a>
+    <a href="/categories/<%= num %>">See All >></a>
   </div>
 
   <div class="swiper mySwiper <%= category %>">
