--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,47 +42,55 @@
     </div>
   </div>
   <nav class="header-2">
-    <ul class="navbar first">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Academic</a>
+    <ul class="navbar first m-0 p-0">
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/23">Academic</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/11">Fiction</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/11">Fiction</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/15">Art</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/15">Art</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/13">Health</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/13">Health</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Politics</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/100"
+          >Lifestyle</a
+        >
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/11">Biography</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/77"
+          >Environment</a
+        >
       </li>
-      <li class="nav-item">
-        <span>. . .</span>
+      <li class="nav-item p-0">
+        <span class="px-2 px-md-1 py-2">. . .</span>
       </li>
     </ul>
-    <ul class="navbar second">
-      <li class="nav-item">
-        <a class="nav-link" href="/category/15">Business</a>
+    <ul class="navbar second m-0 p-0">
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/87">Business</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/22">Children</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/73"
+          >Psychology</a
+        >
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/15">Politics</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/99">Politics</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/22">Religion</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/22">Religion</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/13">Science</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/40">Science</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/category/13">Technology</a>
+      <li class="nav-item p-0">
+        <a class="nav-link px-2 px-md-1 py-2" href="/categories/41"
+          >Technology</a
+        >
       </li>
     </ul>
   </nav>
