--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -111,7 +111,6 @@
 .header-2 .navbar {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   gap: 0 0.8rem;
@@ -166,6 +165,9 @@
 
 .nav-item:hover::after {
   transform: translateX(0);
+}
+.nav-item:hover .nav-link {
+  color: #fff !important;
 }
 
 .nav-link {
@@ -285,7 +287,6 @@
   .nav-link {
     display: block;
     width: 100%;
-    padding: 0 0.5rem;
   }
   .header-1 {
     padding: 0.2rem 1rem;
