--- a/views/category.ejs
+++ b/views/category.ejs
@@ -4,16 +4,7 @@
 />
 <div class="hein">
   <% if(locals.result) { %> <% result.map(book => { %>
-  <img
-    class="items m-2"
-    style="
-      width: 130px;
-      height: 180px;
-      box-shadow: -10px 5px 10px rgba(0, 0, 0, 0.8);
-    "
-    src="<%= book.coverImage %>"
-    alt="book image"
-  />
+  <img class="items m-2" src="<%= book.coverImage %>" alt="book image" />
   <% }) %> <% } %>
 </div>
 <div
@@ -21,8 +12,8 @@
   class="books-container d-flex flex-column justify-content-center align-items-center w-100"
 >
   <div
-    class="data container d-flex flex-wrap"
-    style="width: 100%; height: 95vh"
+    class="data container d-flex flex-wrap align-items-center justify-content-center"
+    style="width: 100%; height: auto"
   ></div>
   <ul id="pagination-demo" class="pagination-sm mt-1"></ul>
 </div>
