--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -59,6 +59,38 @@
   cursor: pointer;
 }
 
+.autocomplete {
+  width: 100%;
+  position: relative;
+  display: inline-block;
+  background-color: #fff;
+}
+.autocomplete-items {
+  max-height: 600px !important;
+  overflow: hidden;
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 10000000000000000000;
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  background-color: DodgerBlue !important;
+  color: #ffffff;
+}
+
 .hero {
   width: 80px;
   display: flex;
