--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,12 +22,15 @@
 }
 
 html {
+  background: url("../../images/banner-bg.jpg");
   font-size: 1rem;
+  height: 100vh;
   overflow-x: hidden;
   scroll-padding-top: 5rem;
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 .errorMessage {
