--- a/views/partials/category.ejs
+++ b/views/partials/category.ejs
@@ -8,7 +8,7 @@
     <div class="swiper-wrapper <%= category %>">
       <% if(locals.books) { %> <% books.forEach(book => { %>
       <div class="swiper-slide">
-        <a href="#" target="_blank"
+        <a href="/<%= book._id %>"
           ><img src="<%= book.coverImage %>" alt="book image"
         /></a>
       </div>
