--- a/views/partials/similarBook.ejs
+++ b/views/partials/similarBook.ejs
@@ -10,7 +10,7 @@
       <% if(locals.similarBooks) { %> <% similarBooks.forEach(book => { %>
       <div class="swiper-slide">
         <a href="/book/<%= book.id %>" 
-          ><img src="<%= book.coverImage %>" alt="book image"
+          ><img src="<%= book.coverImage.split('-s').join('') %>" alt="book image"
         /></a>
       </div>
       <% }); %> <% } %>
