adding type attribute in css and js tag

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -39,12 +39,12 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <title>My Library</title>
   </head>
   <body>
     <%- include('../partials/header.ejs') %> <%- body %>
-    <script defer src="/javascript/index.js"></script>
+    <script defer src="/javascript/index.js" type="text/javascript"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   </body>
 </html>
